# trafalgar

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/trafalgar/: Cargo.toml
crates/trafalgar/src/: editor.rs  lib.rs  link.rs  midi.rs  osc.rs
docs/: companion-app-plan.md  trafalgar-tosc.gen.py  trafalgar.tosc  trafalgar.tosc.xml
